issue 7082: OSX style issues in new UI - Align HTML panel - edit  html button. - Minor adjustment to the search text box.

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -118,7 +118,7 @@
 /* Search Box */
 
 #fbSearchBox {
-    margin-top: 3px;
+    margin-top: 4px;
     margin-bottom: 4px;
 }
 
@@ -529,6 +529,10 @@ toolbarbutton:hover:not([disabled="true"]) {
     width: 23px;
     height: 23px;
     margin: 4px;
+}
+
+#fbToggleHTMLEditing {
+    margin-top: 7px;
 }
 
 /********************************************************************************************/
